{
  "version": 4,
  "terraform_version": "1.0.2",
  "serial": 105,
  "lineage": "2b3beacc-ae5e-3370-ad72-997ddcd63016",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0443305dabd4be2bc",
            "arn": "arn:aws:ec2:us-east-2:363832864047:instance/i-05c194aff83673253",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05c194aff83673253",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "id_rsa",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-02b17c552b0ac738d"
              }
            ],
            "primary_network_interface_id": "eni-02b17c552b0ac738d",
            "private_dns": "ip-10-0-1-63.us-east-2.compute.internal",
            "private_ip": "10.0.1.63",
            "public_ip": "3.138.106.0",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e1a229deb1db1877",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e82abdf31bfb5404",
            "tags": {
              "Name": "Web"
            },
            "tags_all": {
              "Name": "Web"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08815be16c0f09fe5",
              "sg-0df5c5ab50a6ae588"
            ]
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "data.local_file.id_rsa",
            "aws_key_pair.id_rsa",
            "aws_network_interface.public",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc",
            "data.aws_ami.aws_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:363832864047:internet-gateway/igw-0b7bb952cb1e81cbd",
            "id": "igw-0b7bb952cb1e81cbd",
            "owner_id": "363832864047",
            "tags": {
              "Name": "my gateway"
            },
            "tags_all": {
              "Name": "my gateway"
            },
            "vpc_id": "vpc-0451abfb3f57d369b"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0b9a7817c824f479f",
                "device_index": 0,
                "instance": "i-05c194aff83673253"
              }
            ],
            "id": "eni-02b17c552b0ac738d",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "02:2d:62:52:98:0e",
            "private_ip": "10.0.1.63",
            "private_ips": [
              "10.0.1.63"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-08815be16c0f09fe5",
              "sg-0df5c5ab50a6ae588"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e82abdf31bfb5404",
            "tags": {
              "Name": "primary_network_interface"
            },
            "tags_all": {
              "Name": "primary_network_interface"
            }
          },
          "dependencies": [
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:363832864047:route-table/rtb-07021dcf0bf8573de",
            "id": "rtb-07021dcf0bf8573de",
            "owner_id": "363832864047",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b7bb952cb1e81cbd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyRoute-public"
            },
            "tags_all": {
              "Name": "MyRoute-public"
            },
            "vpc_id": "vpc-0451abfb3f57d369b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_gw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06545930997c5c4d5",
            "route_table_id": "rtb-07021dcf0bf8573de",
            "subnet_id": "subnet-0e82abdf31bfb5404"
          },
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available",
            "aws_internet_gateway.my_gw",
            "aws_route_table.my_route_public",
            "aws_subnet.my_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033a25e4e2557c3d7",
            "route_table_id": "rtb-07021dcf0bf8573de",
            "subnet_id": "subnet-0a319b3dc56beaccf"
          },
          "dependencies": [
            "aws_route_table.my_route_public",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available",
            "aws_internet_gateway.my_gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sec_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:363832864047:security-group/sg-08815be16c0f09fe5",
            "description": "For EC2 traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08815be16c0f09fe5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from outside world",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "91.196.54.5/32"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2_sec_group",
            "name_prefix": "",
            "owner_id": "363832864047",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_sec_group"
            },
            "tags_all": {
              "Name": "ec2_sec_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0451abfb3f57d369b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:363832864047:subnet/subnet-0e82abdf31bfb5404",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e82abdf31bfb5404",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "363832864047",
            "tags": {
              "Name": "MySubnet-public-1"
            },
            "tags_all": {
              "Name": "MySubnet-public-1"
            },
            "vpc_id": "vpc-0451abfb3f57d369b"
          },
          "dependencies": [
            "aws_vpc.my_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:363832864047:subnet/subnet-0a319b3dc56beaccf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0a319b3dc56beaccf",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "363832864047",
            "tags": {
              "Name": "MySubnet-public-2"
            },
            "tags_all": {
              "Name": "MySubnet-public-2"
            },
            "vpc_id": "vpc-0451abfb3f57d369b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:363832864047:vpc/vpc-0451abfb3f57d369b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-015fc26c8d3e3373f",
            "default_route_table_id": "rtb-0d3b73e5504d4bfe7",
            "default_security_group_id": "sg-0df5c5ab50a6ae588",
            "dhcp_options_id": "dopt-90f089fb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0451abfb3f57d369b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d3b73e5504d4bfe7",
            "owner_id": "363832864047",
            "tags": {
              "Name": "my vpc"
            },
            "tags_all": {
              "Name": "my vpc"
            }
          }
        }
      ]
    }
  ]
}